# Detector-De-Intrusiones

./: .gitattributes  .gitignore  Makefile  README.md  conftest.py  environment.yml  fix_notebook.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: cic_ids_2017_optimized.parquet  cicids2017_preprocessed_data.joblib
notebooks/: 00_data_ingestion_and_optimization.ipynb  01_exploratory_data_analysis.ipynb  02_feature_engineering_and_preprocessing.ipynb  03_model_training_and_evaluation.ipynb
src/: __init__.py  advanced_feature_selection.py  cross_validation.py  data_utils.py  drift_detection.py  evaluation.py  exceptions.py  feature_engineering.py  hyperparameter_tuning.py  inference.py  model_persistence.py  temporal_validation.py
tests/: __init__.py  test_advanced_feature_selection.py  test_cross_validation.py  test_data_utils.py  test_drift_detection.py  test_evaluation.py  test_feature_engineering.py  test_hyperparameter_tuning.py  test_inference.py  test_model_persistence.py  test_temporal_validation.py
